fix(entries): shifted the label one pixel up

--- a/src/tpltable.directive.scss
+++ b/src/tpltable.directive.scss
@@ -30,7 +30,7 @@ tpl-table {
         display: inline-block;
         vertical-align: middle;
         position: relative;
-        margin-top: -22px;
+        margin-top: -24px;
         margin-left: 5px;
       }
     }
